--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,12 @@ dist.jar=${dist.dir}/Caja.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.barcode-0.2.0.jar=..\\..\\..\\Escritorio\\barcode-0.2.0.jar
+file.reference.commons-logging-1.2-javadoc.jar=..\\..\\..\\Escritorio\\commons-logging-1.2-javadoc.jar
+file.reference.commons-logging-1.2-javadoc.jar-1=..\\..\\..\\Escritorio\\j\\commons-logging-1.2-javadoc.jar
+file.reference.commons-logging-1.2.jar=..\\..\\..\\Escritorio\\commons-logging-1.2.jar
+file.reference.commons-logging-1.2.jar-1=..\\..\\..\\Escritorio\\j\\commons-logging-1.2.jar
+file.reference.fontbox-3.0.0-alpha3.jar=..\\..\\..\\Escritorio\\fontbox-3.0.0-alpha3.jar
+file.reference.fontbox-3.0.0-alpha3.jar-1=..\\..\\..\\Escritorio\\j\\fontbox-3.0.0-alpha3.jar
 file.reference.itext-2.0.8.jar=..\\..\\..\\Escritorio\\itext-2.0.8.jar
 file.reference.itext-2.0.8.jar-1=..\\..\\..\\Escritorio\\j\\itext-2.0.8.jar
 file.reference.itextpdf-5.5.13.3.jar=..\\..\\..\\Escritorio\\itextpdf-5.5.13.3.jar
@@ -43,7 +49,13 @@ javac.classpath=\
     ${file.reference.itextpdf-5.5.13.3.jar}:\
     ${file.reference.itext-2.0.8.jar}:\
     ${file.reference.itext-2.0.8.jar-1}:\
-    ${file.reference.pdfbox-2.0.1.jar}
+    ${file.reference.pdfbox-2.0.1.jar}:\
+    ${file.reference.commons-logging-1.2-javadoc.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.fontbox-3.0.0-alpha3.jar}:\
+    ${file.reference.commons-logging-1.2-javadoc.jar-1}:\
+    ${file.reference.commons-logging-1.2.jar-1}:\
+    ${file.reference.fontbox-3.0.0-alpha3.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
